probando footer desktop

--- a/pages/billeterra.html
+++ b/pages/billeterra.html
@@ -177,7 +177,14 @@
             </div>
         </article>
     </main>
-    <footer>
+    <footer class="footer_mobile">
+        <div class="nav activo"><img src="../imagenes/homeico.svg" alt=""></div>
+        <div class="nav"><a href="./nuevaMoneda.html"><img src="../imagenes/masicoblanco.svg" alt=""></a></div>
+        <div class="nav"><a href="./nuevaCompra.html"><img src="../imagenes/coinicoblanco.svg" alt=""></a></div>
+        <div class="nav"><a href="./historial.html"></a><img src="../imagenes/historialicoblanco.svg" alt=""></a></div>
+        <div class="nav"><a href="../index.html"><img src="../imagenes/saliricoblanco.svg" alt=""></a></div>
+    </footer>
+    <footer class="footer_desktop">
         <div class="nav activo"><img src="../imagenes/homeico.svg" alt=""></div>
         <div class="nav"><a href="./nuevaMoneda.html"><img src="../imagenes/masicoblanco.svg" alt=""></a></div>
         <div class="nav"><a href="./nuevaCompra.html"><img src="../imagenes/coinicoblanco.svg" alt=""></a></div>
