footer modificado en billeterra

--- a/pages/billeterra.html
+++ b/pages/billeterra.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billeterra</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../estilo/estilo.css">
 </head>
+
 <body>
     <header>
         <div class="saludo">
@@ -32,9 +35,9 @@
         <article class="cardsMonedas">
             <div class="moneda">
                 <div class="logo"><a href="./historial.html">
-                    <img src="../imagenes/egld.png" alt="Elron"></a>
+                        <img src="../imagenes/egld.png" alt="Elron"></a>
                     <p>Elron</p>
-                    
+
                 </div>
                 <div class="totales">
                     <div class="totalMoneda">
@@ -185,12 +188,46 @@
         <div class="nav"><a href="../index.html"><img src="../imagenes/saliricoblanco.svg" alt=""></a></div>
     </footer>
     <footer class="footer_desktop">
-        <div class="nav activo"><img src="../imagenes/homeico.svg" alt=""></div>
-        <div class="nav"><a href="./nuevaMoneda.html"><img src="../imagenes/masicoblanco.svg" alt=""></a></div>
-        <div class="nav"><a href="./nuevaCompra.html"><img src="../imagenes/coinicoblanco.svg" alt=""></a></div>
-        <div class="nav"><a href="./historial.html"></a><img src="../imagenes/historialicoblanco.svg" alt=""></a></div>
-        <div class="nav"><a href="../index.html"><img src="../imagenes/saliricoblanco.svg" alt=""></a></div>
+        <div class="nav activo">
+            <div class="logoSeccion">
+                <img src="../imagenes/homeico.svg" alt="">
+                <p class="textoActivo">Inicio</p>
+            </div>
+        </div>
+        <div class="nav">
+            <a href="./nuevaMoneda.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/masicoblanco.svg" alt="">
+                    <p>Nueva Moneda</p>
+                </div>
+            </a>
+        </div>
+        <div class="nav">
+            <a href="./nuevaCompra.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/coinicoblanco.svg" alt="">
+                    <p>Nueva Compra</p>
+                </div>
+            </a>
+        </div>
+        <div class="nav">
+            <a href="./historial.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/historialicoblanco.svg" alt="">
+                    <p>Historial</p>
+                </div>
+            </a>
+        </div>
+        <div class="nav">
+            <a href="../index.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/saliricoblanco.svg" alt="">
+                    <p>Salir</p>
+                </div>
+            </a>
+        </div>
     </footer>
 
 </body>
+
 </html>
