cambie footerdesktop en todas las secciones

--- a/pages/billeterra.html
+++ b/pages/billeterra.html
@@ -180,14 +180,14 @@
             </div>
         </article>
     </main>
-    <footer class="footer_mobile">
+    <footer class="footerMobile">
         <div class="nav activo"><img src="../imagenes/homeico.svg" alt=""></div>
         <div class="nav"><a href="./nuevaMoneda.html"><img src="../imagenes/masicoblanco.svg" alt=""></a></div>
         <div class="nav"><a href="./nuevaCompra.html"><img src="../imagenes/coinicoblanco.svg" alt=""></a></div>
         <div class="nav"><a href="./historial.html"></a><img src="../imagenes/historialicoblanco.svg" alt=""></a></div>
         <div class="nav"><a href="../index.html"><img src="../imagenes/saliricoblanco.svg" alt=""></a></div>
     </footer>
-    <footer class="footer_desktop">
+    <footer class="footerDesktop">
         <div class="nav activo">
             <div class="logoSeccion">
                 <img src="../imagenes/homeico.svg" alt="">
