--- a/pages/nuevaCompra.html
+++ b/pages/nuevaCompra.html
@@ -26,13 +26,55 @@
         
     </main>
 
-    <footer>
+    <footer class="footerMobile">
         <div class="nav "><a href="./billeterra.html"><img src="../imagenes/homeicoblanco.svg" alt=""></a></div>
         <div class="nav"><a href="./nuevaMoneda.html"><img src="../imagenes/masicoblanco.svg" alt=""></a></div>
         <div class="nav activo"><a href=""><img src="../imagenes/coinico.svg" alt=""></a></div>
         <div class="nav"><a href="./historial.html"><img src="../imagenes/historialicoblanco.svg" alt=""></a></div>
         <div class="nav"><a href="../index.html"><img src="../imagenes/saliricoblanco.svg" alt=""></a></div>
     </footer>
+
+    <footer class="footerDesktop">
+        <div class="nav">
+            <div class="logoSeccion">
+                <img src="../imagenes/homeicoblanco.svg" alt="">
+                <p>Inicio</p>
+            </div>
+        </div>
+        <div class="nav">
+            <a href="./nuevaMoneda.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/masicoblanco.svg" alt="">
+                    <p>Nueva Moneda</p>
+                </div>
+            </a>
+        </div>
+        <div class="nav  activo">
+            <a href="./nuevaCompra.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/coinico.svg" alt="">
+                    <p  class="textoActivo">Nueva Compra</p>
+                </div>
+            </a>
+        </div>
+        <div class="nav">
+            <a href="./historial.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/historialicoblanco.svg" alt="">
+                    <p>Historial</p>
+                </div>
+            </a>
+        </div>
+        <div class="nav">
+            <a href="../index.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/saliricoblanco.svg" alt="">
+                    <p>Salir</p>
+                </div>
+            </a>
+        </div>
+    </footer>
+
     <script src="../js/nuevaCompra.js"></script>
 </body>
 </html>
