--- a/pages/historial.html
+++ b/pages/historial.html
@@ -93,13 +93,54 @@
             <p>15000</p>
         </div>
     </article>
-    <footer>
+    <footer class="footerMobile">
         <div class="nav "><a href="./billeterra.html"><img src="../imagenes/homeicoblanco.svg" alt=""></a></div>
         <div class="nav"><a href="./nuevaMoneda.html"><img src="../imagenes/masicoblanco.svg" alt=""></a></div>
         <div class="nav"><a href="./nuevaCompra.html"><img src="../imagenes/coinicoblanco.svg" alt=""></a></div>
         <div class="nav activo"><img src="../imagenes/historialico.svg" alt=""></div>
         <div class="nav"><a href="../index.html"><img src="../imagenes/saliricoblanco.svg" alt=""></a></div>
     </footer>
+    <footer class="footerDesktop">
+        <a href="./billeterra.html">
+            <div class="logoSeccion">
+                <img src="../imagenes/homeicoblanco.svg" alt="">
+                <p>Inicio</p>
+            </div>
+        </a>
+        <div class="nav">
+            <a href="./nuevaMoneda.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/masicoblanco.svg" alt="">
+                    <p>Nueva Moneda</p>
+                </div>
+            </a>
+        </div>
+        <div class="nav">
+            <a href="./nuevaCompra.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/coinicoblanco.svg" alt="">
+                    <p>Nueva Compra</p>
+                </div>
+            </a>
+        </div>
+        <div class="nav activo">
+            <a href="./historial.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/historialico.svg" alt="">
+                    <p class="textoActivo">Historial</p>
+                </div>
+            </a>
+        </div>
+        <div class="nav">
+            <a href="../index.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/saliricoblanco.svg" alt="">
+                    <p>Salir</p>
+                </div>
+            </a>
+        </div>
+    </footer>
+
     <script src="../js/historial.js"></script>
 </body>
 </html>
