--- a/pages/nuevaMoneda.html
+++ b/pages/nuevaMoneda.html
@@ -24,13 +24,57 @@
         </article>
     </main>
 <a href=""></a>
-    <footer>
+    <footer class="footerMobile">
         <div class="nav "><a href="./billeterra.html"><img src="../imagenes/homeicoblanco.svg" alt=""></a></div>
         <div class="nav activo"><a href="./nuevaMoneda.html"><img src="../imagenes/masico.svg" alt=""></a></div>
         <div class="nav"><a href="./nuevaCompra.html"><img src="../imagenes/coinicoblanco.svg" alt=""></a></div>
         <div class="nav"><a href="./historial.html"><img src="../imagenes/historialicoblanco.svg" alt=""></a></div>
         <div class="nav"><a href="../index.html"><img src="../imagenes/saliricoblanco.svg" alt=""></a></div>
     </footer>
+
+    <footer class="footerDesktop">
+        <div class="nav">
+            <a href="./billeterra.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/homeicoblanco.svg" alt="">
+                    <p>Inicio</p>
+                </div>
+            </a>
+        </div>
+        <div class="nav activo">
+            <a href="./nuevaMoneda.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/masico.svg" alt="">
+                    <p class="textoActivo">Nueva Moneda</p>
+                </div>
+            </a>
+        </div>
+        <div class="nav">
+            <a href="./nuevaCompra.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/coinicoblanco.svg" alt="">
+                    <p>Nueva Compra</p>
+                </div>
+            </a>
+        </div>
+        <div class="nav">
+            <a href="./historial.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/historialicoblanco.svg" alt="">
+                    <p>Historial</p>
+                </div>
+            </a>
+        </div>
+        <div class="nav">
+            <a href="../index.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/saliricoblanco.svg" alt="">
+                    <p>Salir</p>
+                </div>
+            </a>
+        </div>
+    </footer>
+
     <script src="../js/nuevaMoneda.js"></script>
 </body>
 </html>
