comente scripts, y solucione problema link inicio en nueva moneda

--- a/pages/historial.html
+++ b/pages/historial.html
@@ -141,6 +141,6 @@
         </div>
     </footer>
 
-    <script src="../js/historial.js"></script>
+    <!-- <script src="../js/historial.js"></script> -->
 </body>
 </html>
