--- a/pages/nuevaMoneda.html
+++ b/pages/nuevaMoneda.html
@@ -75,6 +75,6 @@
         </div>
     </footer>
 
-    <script src="../js/nuevaMoneda.js"></script>
+    <!-- <script src="../js/nuevaMoneda.js"></script> -->
 </body>
 </html>
