--- a/pages/nuevaCompra.html
+++ b/pages/nuevaCompra.html
@@ -36,10 +36,12 @@
 
     <footer class="footerDesktop">
         <div class="nav">
-            <div class="logoSeccion">
-                <img src="../imagenes/homeicoblanco.svg" alt="">
-                <p>Inicio</p>
-            </div>
+            <a href="./billeterra.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/homeicoblanco.svg" alt="">
+                    <p>Inicio</p>
+                </div>
+            </a>
         </div>
         <div class="nav">
             <a href="./nuevaMoneda.html">
@@ -75,6 +77,6 @@
         </div>
     </footer>
 
-    <script src="../js/nuevaCompra.js"></script>
+   <!--  <script src="../js/nuevaCompra.js"></script> -->
 </body>
 </html>
