footer desktop listo

--- a/pages/billeterra.html
+++ b/pages/billeterra.html
@@ -189,10 +189,12 @@
     </footer>
     <footer class="footerDesktop">
         <div class="nav activo">
-            <div class="logoSeccion">
-                <img src="../imagenes/homeico.svg" alt="">
-                <p class="textoActivo">Inicio</p>
-            </div>
+            <a href="./billeterra.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/homeico.svg" alt="">
+                    <p class="textoActivo">Inicio</p>
+                </div>
+            </a>
         </div>
         <div class="nav">
             <a href="./nuevaMoneda.html">
