--- a/pages/historial.html
+++ b/pages/historial.html
@@ -101,12 +101,14 @@
         <div class="nav"><a href="../index.html"><img src="../imagenes/saliricoblanco.svg" alt=""></a></div>
     </footer>
     <footer class="footerDesktop">
-        <a href="./billeterra.html">
-            <div class="logoSeccion">
-                <img src="../imagenes/homeicoblanco.svg" alt="">
-                <p>Inicio</p>
-            </div>
-        </a>
+        <div class="nav">
+            <a href="./billeterra.html">
+                <div class="logoSeccion">
+                    <img src="../imagenes/homeicoblanco.svg" alt="">
+                    <p>Inicio</p>
+                </div>
+            </a>
+        </div>
         <div class="nav">
             <a href="./nuevaMoneda.html">
                 <div class="logoSeccion">
