--- a/pages/billeterra.html
+++ b/pages/billeterra.html
@@ -208,7 +208,7 @@
             <a href="./nuevaCompra.html">
                 <div class="logoSeccion">
                     <img src="../imagenes/coinicoblanco.svg" alt="">
-                    <p>Nueva Comp</p>
+                    <p>Nueva Compra</p>
                 </div>
             </a>
         </div>
