--- a/pages/nuevaCompra.html
+++ b/pages/nuevaCompra.html
@@ -17,11 +17,11 @@
     </Header>
     <main>
         <article class="ingresoCompra">
-            <input type="text" placeholder="Nombre moneda">
-            <input type="text" placeholder="Simbolo moneda">
-            <input type="number" placeholder="Cantidad comprada">
-            <input type="number" placeholder="Cotizacion compra">
-            <input type="date" placeholder="Fecha">
+            <input type="text" placeholder="Nombre moneda" id="monedaNombre">
+            <input type="text" placeholder="Simbolo moneda" id="monedaSimbolo">
+            <input type="number" placeholder="Cantidad comprada" id="monedaCantidad">
+            <input type="number" placeholder="Cotizacion compra" id="monedaCotizacion">
+            <input type="date" placeholder="Fecha" id="monedaFecha">
         </article>
         
     </main>
@@ -77,6 +77,6 @@
         </div>
     </footer>
 
-   <!--  <script src="../js/nuevaCompra.js"></script> -->
+   <script src="../js/dom.js"></script>
 </body>
 </html>
