--- a/pages/pruebadom.html
+++ b/pages/pruebadom.html
@@ -229,7 +229,7 @@
             </a>
         </div>
     </footer>
-    <script src="../js/dom.js"></script>
+    <script src="../js/dompueba.js"></script>
 
 </body>
 
