--- a/pages/nuevaMoneda.html
+++ b/pages/nuevaMoneda.html
@@ -17,8 +17,8 @@
     </header>
     <main>
         <article class="ingresoCompra">
-            <input type="text" placeholder="Nombre moneda">
-            <input type="text" placeholder="Simbolo moneda">
+            <input type="text" placeholder="Nombre moneda" id="nombreMoneda">
+            <input type="text" placeholder="Simbolo moneda" id="simboloMoneda">
             <div class="btns">Crear</div>
 
         </article>
@@ -75,6 +75,6 @@
         </div>
     </footer>
 
-    <!-- <script src="../js/nuevaMoneda.js"></script> -->
+    <script src="../js/dom.js"></script>
 </body>
 </html>
