link eventos al inicio

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <input type="password"placeholder="Contraseña">
             </div>
             <div class="btn">
-                <a href="./pages/billeterra.html">Ingresar</a>
+                <a href="./pages/eventos.html">Ingresar</a>
             </div>
             
         </article>
