--- a/pages/nuevaMoneda.html
+++ b/pages/nuevaMoneda.html
@@ -19,8 +19,12 @@
         <article class="ingresoCompra">
             <input type="text" placeholder="Nombre moneda" id="nombreMoneda">
             <input type="text" placeholder="Simbolo moneda" id="simboloMoneda">
-            <div class="btns">Crear</div>
+            <div class="btns"  id="btnCrear">Crear</div>
 
+        </article>
+        <article class="cardsMonedas" id="cardsMonedas">
+                      
+            
         </article>
     </main>
 <a href=""></a>
@@ -75,6 +79,6 @@
         </div>
     </footer>
 
-    <script src="../js/dom.js"></script>
+    <script src="../js/nuevaMoneda.js"></script>
 </body>
 </html>
