--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </article>
         <article class="iniciar">
             <div class="input">
-                <input type="text" placeholder="Usuario">
+                <input type="text" placeholder="Usuario" id="usuario">
             </div>
             <div class="input">
                 <input type="password"placeholder="Contraseña">
