--- a/pages/nuevaMoneda.html
+++ b/pages/nuevaMoneda.html
@@ -81,6 +81,7 @@
 
     
 
-    <script src="../js/nuevaMoneda.js"></script>
+    <script src="../js/nuevaMonedaJq.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
 </body>
 </html>
