--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <p id="tyc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id modi dolor, temporibus ab iusto necessitatibus magnam error magni accusamus consequatur autem corrupti nemo fugit commodi nisi deleniti non minus. Fugiat.
                 Eum praesentium porro ducimus vitae eligendi? Doloribus ad eius explicabo expedita autem alias deserunt blanditiis veniam id exercitationem quos, fugiat voluptate eum quas error minus quam, nesciunt sapiente qui odit!
                 </p>
-                <button class="btn" id="btnTerminos">Terminosy condiciones</button>
-                <button class="btn" id="btnTerminos2">Terminosy condiciones</button>
+                <div class="btn" id="btnTerminos">Terminosy condiciones</div>
+                <div class="btn" id="btnTerminos2">Terminosy condiciones</div>
 
                 
             </div>
