--- a/pages/billeterra.html
+++ b/pages/billeterra.html
@@ -24,6 +24,7 @@
         </div>
     </header>
     <main>
+        
         <article class="botones">
             <div class="btn">
                 <a href="./nuevaMoneda.html">Nueva moneda</a>
@@ -32,8 +33,8 @@
                 <a href="./nuevaCompra.html">Nueva compra</a>
             </div>
         </article>
-        <article class="cardsMonedas">
-            <div class="moneda">
+        <article class="cardsMonedas" id="monedasCard">
+            <div class="moneda" id="monedani">
                 <div class="logo"><a href="./historial.html">
                         <img src="../imagenes/egld.png" alt="Elron"></a>
                     <p>Elron</p>
@@ -188,8 +189,8 @@
         <div class="nav"><a href="../index.html"><img src="../imagenes/saliricoblanco.svg" alt=""></a></div>
     </footer>
     <footer class="footerDesktop">
-        <div class="nav activo">
-            <a href="./billeterra.html">
+        <div class="nav activo" id="navActivo">
+            <a href="#">
                 <div class="logoSeccion">
                     <img src="../imagenes/homeico.svg" alt="">
                     <p class="textoActivo">Inicio</p>
@@ -229,7 +230,8 @@
             </a>
         </div>
     </footer>
-    <script src="../js/dom.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
+    <script src="../js/Billeterra.js"></script>
 
 </body>
 
