--- a/pages/billeterra.html
+++ b/pages/billeterra.html
@@ -34,150 +34,8 @@
             </div>
         </article>
         <article class="cardsMonedas" id="monedasCard">
-            <div class="moneda" id="monedani">
-                <div class="logo"><a href="./historial.html">
-                        <img src="../imagenes/egld.png" alt="Elron"></a>
-                    <p>Elron</p>
+            <div class="table">
 
-                </div>
-                <div class="totales">
-                    <div class="totalMoneda">
-                        <p class="catidadMoneda">20</p>
-                        <p class="simboloMoneda">EGLD</p>
-                    </div>
-                    <div class="totalDinero">
-                        <p class="dinero">100</p>
-                        <p class="dinero">ARS</p>
-                    </div>
-                </div>
-            </div>
-            <div class="moneda">
-                <div class="logo">
-                    <img src="../imagenes/dot.png" alt="Polkadot">
-                    <p>Polkadot</p>
-                </div>
-                <div class="totales">
-                    <div class="totalMoneda">
-                        <p class="catidadMoneda">50</p>
-                        <p class="simboloMoneda">DOT</p>
-                    </div>
-                    <div class="totalDinero">
-                        <p class="dinero">3000</p>
-                        <p class="simboloDinero">ARS</p>
-                    </div>
-                </div>
-            </div>
-            <div class="moneda">
-                <div class="logo">
-                    <img src="../imagenes/eth.png" alt="Ethereum">
-                    <p>Ethereum</p>
-                </div>
-                <div class="totales">
-                    <div class="totalMoneda">
-                        <p class="catidadMoneda">0,1</p>
-                        <p class="simboloMoneda">ETH</p>
-                    </div>
-                    <div class="totalDinero">
-                        <p class="dinero">30000</p>
-                        <p class="simboloDinero">ARS</p>
-                    </div>
-                </div>
-            </div>
-            <div class="moneda">
-                <div class="logo">
-                    <img src="../imagenes/doge.png" alt="Dogecoin">
-                    <p>Dogecoin</p>
-                </div>
-                <div class="totales">
-                    <div class="totalMoneda">
-                        <p class="catidadMoneda">50</p>
-                        <p class="simboloMoneda">DOGE</p>
-                    </div>
-                    <div class="totalDinero">
-                        <p class="dinero">2000</p>
-                        <p class="simboloDinero">ARS</p>
-                    </div>
-                </div>
-            </div>
-            <div class="moneda">
-                <div class="logo">
-                    <img src="../imagenes/sol.png" alt="Solana">
-                    <p>Solana</p>
-                </div>
-                <div class="totales">
-                    <div class="totalMoneda">
-                        <p class="catidadMoneda">15</p>
-                        <p class="simboloMoneda">SOL</p>
-                    </div>
-                    <div class="totalDinero">
-                        <p class="dinero">3000</p>
-                        <p class="simboloDinero">ARS</p>
-                    </div>
-                </div>
-            </div>
-            <div class="moneda">
-                <div class="logo">
-                    <img src="../imagenes/bnb.png" alt="Binance coin">
-                    <p>Binance coin</p>
-                </div>
-                <div class="totales">
-                    <div class="totalMoneda">
-                        <p class="catidadMoneda">1</p>
-                        <p class="simboloMoneda">BNB</p>
-                    </div>
-                    <div class="totalDinero">
-                        <p class="dinero">10000</p>
-                        <p class="simboloDinero">ARS</p>
-                    </div>
-                </div>
-            </div>
-            <div class="moneda">
-                <div class="logo">
-                    <img src="../imagenes/luna.png" alt="Terra">
-                    <p>Terra</p>
-                </div>
-                <div class="totales">
-                    <div class="totalMoneda">
-                        <p class="catidadMoneda">1</p>
-                        <p class="simboloMoneda">LUNA</p>
-                    </div>
-                    <div class="totalDinero">
-                        <p class="dinero">10000</p>
-                        <p class="simboloDinero">ARS</p>
-                    </div>
-                </div>
-            </div>
-            <div class="moneda">
-                <div class="logo">
-                    <img src="../imagenes/matic.png" alt="Polygon">
-                    <p>Polygon</p>
-                </div>
-                <div class="totales">
-                    <div class="totalMoneda">
-                        <p class="catidadMoneda">1</p>
-                        <p class="simboloMoneda">MATIC</p>
-                    </div>
-                    <div class="totalDinero">
-                        <p class="dinero">10000</p>
-                        <p class="simboloDinero">ARS</p>
-                    </div>
-                </div>
-            </div>
-            <div class="moneda">
-                <div class="logo">
-                    <img src="../imagenes/uni.png" alt="Uniswap">
-                    <p>Uniswap</p>
-                </div>
-                <div class="totales">
-                    <div class="totalMoneda">
-                        <p class="catidadMoneda">1</p>
-                        <p class="simboloMoneda">UNI</p>
-                    </div>
-                    <div class="totalDinero">
-                        <p class="dinero">10000</p>
-                        <p class="simboloDinero">ARS</p>
-                    </div>
-                </div>
             </div>
         </article>
     </main>
