--- a/pages/billeterra.html
+++ b/pages/billeterra.html
@@ -13,8 +13,8 @@
 
 <body>
     <header>
-        <div class="saludo">
-            Hola Nombre
+        <div class="saludo" id="saludo">
+            
         </div>
         <div class="saldo">
             Tu saldo es de:
@@ -89,6 +89,7 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
+    <script src="../js/inicio.js"></script>
     <script src="../js/Billeterra.js"></script>
 
 </body>
