--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <input type="text" placeholder="Usuario" id="usuario">
             </div>
             <div class="input">
-                <input type="password"placeholder="Contraseña">
+                <input type="password" placeholder="Contraseña">
             </div>
-            <div class="btn">
+            <div class="btn" id="guardar">
                 <a href="./pages/billeterra.html">Ingresar</a>
             </div>
             <div class="terminos" id="terminos">
