--- a/pages/historial.html
+++ b/pages/historial.html
@@ -73,6 +73,6 @@
         </div>
     </footer>
 
-    <script src="../js/nuevaCompra2.js"></script>
+    <script src="../js/nuevaCompra.js"></script>
 </body>
 </html>
