--- a/pages/historial.html
+++ b/pages/historial.html
@@ -19,7 +19,9 @@
     <article class="historial">
         <div class="col-md-6">
             <h2 id="administra" class="text-center my-4"></h2>
-            <ul id="monedas" class="list-group"></ul>
+            <ul id="monedas" class="list-group">
+            
+            </ul>
         </div>
     </article>
     <div class="vacio"></div>
