--- a/pages/billeterra.html
+++ b/pages/billeterra.html
@@ -55,14 +55,14 @@
                 </div>
             </a>
         </div>
-        <div class="nav">
+        <!-- <div class="nav">
             <a href="./nuevaMoneda.html">
                 <div class="logoSeccion">
                     <img src="../imagenes/masicoblanco.svg" alt="">
                     <p>Nueva Moneda</p>
                 </div>
             </a>
-        </div>
+        </div> -->
         <div class="nav">
             <a href="./nuevaCompra.html">
                 <div class="logoSeccion">
