--- a/pages/nuevaCompra.html
+++ b/pages/nuevaCompra.html
@@ -83,14 +83,14 @@
                     </div>
                 </a>
             </div>
-            <div class="nav">
+            <!-- <div class="nav">
                 <a href="./nuevaMoneda.html">
                     <div class="logoSeccion">
                         <img src="../imagenes/masicoblanco.svg" alt="">
                         <p>Nueva Moneda</p>
                     </div>
                 </a>
-            </div>
+            </div> -->
             <div class="nav  activo">
                 <a href="./nuevaCompra.html">
                     <div class="logoSeccion">
