--- a/pages/billeterra.html
+++ b/pages/billeterra.html
@@ -37,6 +37,7 @@
             </div>
         </article>
     </main>
+    <div class="vacio"></div>
     <footer class="footerMobile">
         <div class="nav activo"><img src="../imagenes/homeico.svg" alt=""></div>
         <div class="nav"><a href="./nuevaMoneda.html"><img src="../imagenes/masicoblanco.svg" alt=""></a></div>
